# Clothes-Shop

./: CMakeLists.txt  IOInterface.h  menu.cpp  menu.h
persons/: customer.cpp  customer.h  employee.cpp  employee.h  person.cpp  person.h
shop/: jacket.cpp  jacket.h  pants.cpp  pants.h  product.cpp  product.h  pyjama.cpp  pyjama.h  shirt.cpp  shirt.h
